--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ html {
     margin-top: 205px;
 }
 
-p {
+.header-title {
     color: white;
     font-family: Raleway;
     margin-left: 1.66%;
@@ -142,4 +142,9 @@ p {
     border-bottom: 2px solid #f1f1f1;
     width: 30%;
     padding-bottom: 10px;
+}
+
+.footer-text {
+    color: white;
+    text-align: center;
 }
