--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,6 @@ html {
   left: 0;
   width: 100%;
   height: 205px;
-  margin: 0;
-  padding: 0;
   overflow: hidden;
 }
 
@@ -25,8 +23,6 @@ html {
   left: 0;
   width: 100%;
   height: 200px;
-  margin: 0;
-  padding: 0;
   animation: move 20s infinite linear;
 }
 
@@ -44,12 +40,11 @@ html {
   height: 200px;
   margin: 0;
   padding: 0;
-  border-right: 2px solid black;
+  border-right: 2px solid white;
   background-position: center;
   background-size: 600px auto;
-  display: block;
   position: absolute;
-  border-bottom: 5px solid black;
+  border-bottom: 2px solid white;
 }
 
 #header > .one {
@@ -92,10 +87,24 @@ html {
     float: left; /*To get rid of the whitespace that the browser provides */
     margin: 1.66%; /*calculated by taking remaining percentage (10%) and divided by 6 (number of margins)*/
     filter: grayscale(.8);
+    position: relative;
+    overflow: hidden;
+}
+
+.col-3 img::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    display: block;
+    background: rgba(0,0,0,.2);
+    border-radius: 100%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
 }
 
 .col-3 img:hover {
-    animation: colorful ease-in-out .75s forwards
+    animation: colorful ease-in-out .75s forwards;
 }
 
 .col-3 img:hover::before {
@@ -117,13 +126,15 @@ html {
 @keyframes pop {
     0% {
         opacity: .5;
-        background: blue;
+        background: rgba(213, 156, 34, .2);
     }
     50% {
         opacity: 1;
-        background: orange;
+        background: rgba(213, 34, 160, .2);
     }
     100% {
+        width: 100%;
+        height: 200%;
         opacity: 0;
     }
 }
